@@ -26,15 +26,10 @@ import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 
-import java.time.LocalDateTime;
-
-import java.time.format.DateTimeFormatter;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.swing.Action;
 import javax.swing.JFileChooser;
@@ -44,6 +39,8 @@ import javax.swing.Timer;
 import javax.swing.UIManager;
 
 import javax.swing.filechooser.FileFilter;
+
+import uk.blankaspect.common.build.BuildUtils;
 
 import uk.blankaspect.common.cls.ClassUtils;
 
@@ -65,13 +62,13 @@ import uk.blankaspect.common.resource.ResourceUtils;
 
 import uk.blankaspect.common.string.StringUtils;
 
-import uk.blankaspect.common.swing.image.PngOutputFile;
+import uk.blankaspect.ui.swing.image.PngOutputFile;
 
-import uk.blankaspect.common.swing.misc.GuiUtils;
+import uk.blankaspect.ui.swing.misc.GuiUtils;
 
-import uk.blankaspect.common.swing.text.TextRendering;
+import uk.blankaspect.ui.swing.text.TextRendering;
 
-import uk.blankaspect.common.swing.textfield.TextFieldUtils;
+import uk.blankaspect.ui.swing.textfield.TextFieldUtils;
 
 //----------------------------------------------------------------------
 
@@ -92,20 +89,13 @@ public class App
 	public static final		String	LONG_NAME	= "Pattern generator";
 	public static final		String	NAME_KEY	= "patternGenerator";
 
-	public static final		int	MAX_NUM_DOCUMENTS	= 64;
+	public static final		int		MAX_NUM_DOCUMENTS	= 64;
 
 	public static final		int		MAX_NUM_SEED_DIGITS	= 18;
 	public static final		long	MIN_SEED			= 0;
-	public static final		long	MAX_SEED			=
-											Math.round(Math.pow(10.0, (double)MAX_NUM_SEED_DIGITS)) - 1;
+	public static final		long	MAX_SEED			= Math.round(Math.pow(10.0, (double)MAX_NUM_SEED_DIGITS)) - 1;
 
-	private static final	int	FILE_CHECK_TIMER_INTERVAL	= 500;
-
-	private static final	String	VERSION_PROPERTY_KEY	= "version";
-	private static final	String	BUILD_PROPERTY_KEY		= "build";
-	private static final	String	RELEASE_PROPERTY_KEY	= "release";
-
-	private static final	String	VERSION_DATE_TIME_PATTERN	= "uuuuMMdd-HHmmss";
+	private static final	int		FILE_CHECK_TIMER_INTERVAL	= 500;
 
 	private static final	String	BUILD_PROPERTIES_FILENAME	= "build.properties";
 
@@ -195,6 +185,13 @@ public class App
 //  Instance methods
 ////////////////////////////////////////////////////////////////////////
 
+	public String getVersionString()
+	{
+		return versionStr;
+	}
+
+	//------------------------------------------------------------------
+
 	public MainWindow getMainWindow()
 	{
 		return mainWindow;
@@ -260,51 +257,6 @@ public class App
 				return documentView.view;
 		}
 		return null;
-	}
-
-	//------------------------------------------------------------------
-
-	/**
-	 * Returns a string representation of the version of this application.  If this class was loaded from a JAR, the
-	 * string is created from the values of properties that are defined in a resource named 'build.properties';
-	 * otherwise, the string is created from the date and time when this method is first called.
-	 *
-	 * @return a string representation of the version of this application.
-	 */
-
-	public String getVersionString()
-	{
-		if (versionStr == null)
-		{
-			StringBuilder buffer = new StringBuilder(32);
-			if (ClassUtils.isFromJar(getClass()))
-			{
-				// Append version number
-				String str = buildProperties.get(VERSION_PROPERTY_KEY);
-				if (str != null)
-					buffer.append(str);
-
-				// If this is not a release, append build
-				boolean release = Boolean.parseBoolean(buildProperties.get(RELEASE_PROPERTY_KEY));
-				if (!release)
-				{
-					str = buildProperties.get(BUILD_PROPERTY_KEY);
-					if (str != null)
-					{
-						if (buffer.length() > 0)
-							buffer.append(' ');
-						buffer.append(str);
-					}
-				}
-			}
-			else
-			{
-				buffer.append('b');
-				buffer.append(DateTimeFormatter.ofPattern(VERSION_DATE_TIME_PATTERN).format(LocalDateTime.now()));
-			}
-			versionStr = buffer.toString();
-		}
-		return versionStr;
 	}
 
 	//------------------------------------------------------------------
@@ -494,7 +446,7 @@ public class App
 
 	public synchronized long getNextRandomSeed()
 	{
-		return (prng.nextLong() % (MAX_SEED + 1));
+		return prng.nextLong() % (MAX_SEED + 1);
 	}
 
 	//------------------------------------------------------------------
@@ -515,8 +467,7 @@ public class App
 	{
 		DocumentView documentView = new DocumentView(document);
 		documentsViews.add(documentView);
-		mainWindow.addView(document.getTitleString(false), document.getTitleString(true),
-						   documentView.view);
+		mainWindow.addView(document.getTitleString(false), document.getTitleString(true), documentView.view);
 	}
 
 	//------------------------------------------------------------------
@@ -533,8 +484,7 @@ public class App
 		throws AppException
 	{
 		PatternDocument[] result = new PatternDocument[1];
-		TaskProgressDialog.showDialog(mainWindow, READ_FILE_STR,
-									  new Task.ReadDocument(fileInfo, result));
+		TaskProgressDialog.showDialog(mainWindow, READ_FILE_STR, new Task.ReadDocument(fileInfo, result));
 		return result[0];
 	}
 
@@ -544,8 +494,7 @@ public class App
 							   PatternDocument.FileInfo fileInfo)
 		throws AppException
 	{
-		TaskProgressDialog.showDialog(mainWindow, WRITE_FILE_STR,
-									  new Task.WriteDocument(document, fileInfo));
+		TaskProgressDialog.showDialog(mainWindow, WRITE_FILE_STR, new Task.WriteDocument(document, fileInfo));
 	}
 
 	//------------------------------------------------------------------
@@ -582,8 +531,7 @@ public class App
 		{
 			int index = mainWindow.getTabIndex();
 			documentsViews.set(index, new DocumentView(document));
-			mainWindow.setTabText(index, document.getTitleString(false),
-								  document.getTitleString(true));
+			mainWindow.setTabText(index, document.getTitleString(false), document.getTitleString(true));
 			mainWindow.setView(index, getView());
 		}
 	}
@@ -692,10 +640,11 @@ public class App
 		documentsViews = new ArrayList<>();
 		prng = new Prng01();
 
-		// Read build properties
+		// Read build properties and initialise version string
 		try
 		{
-			buildProperties = new ResourceProperties(ResourceUtils.absoluteName(getClass(), BUILD_PROPERTIES_FILENAME));
+			buildProperties = new ResourceProperties(ResourceUtils.normalisedPathname(getClass(), BUILD_PROPERTIES_FILENAME));
+			versionStr = BuildUtils.versionString(getClass(), buildProperties);
 		}
 		catch (LocationException e)
 		{
@@ -754,9 +703,7 @@ public class App
 			if (args.length > 0)
 			{
 				// Create list of files from command-line arguments
-				List<File> files = Arrays.stream(args)
-											.map(argument -> new File(PathnameUtils.parsePathname(argument)))
-											.collect(Collectors.toList());
+				List<File> files = Stream.of(args).map(arg -> new File(PathnameUtils.parsePathname(arg))).toList();
 
 				// Open files
 				openFiles(files);
